<resources>
    <string name="app_name">Depth Of Field Calculator</string>
    <string name="activity_main_name">Depth Of Field Calculator</string>
    <string name="activity_lens_details_name">Lens Details</string>
    <string name="activity_calculate_depth_of_field_name">Calculator</string>
    <string name="select_a_lens">Select a lens:</string>
    <string name="make">Make</string>
    <string name="focal_length_mm">Focal Length [mm]</string>
    <string name="aperture">Aperture</string>
    <string name="ex_canon">ex. Canon</string>
    <string name="ex_200_for_200mm">ex. 200 for 200mm</string>
    <string name="ex_2_8_for_f2_8">ex. 2.8 for F2.8</string>
    <string name="add_lens">Add Lens</string>
    <string name="enter_all_values">Enter all values</string>
    <string name="far_focal_distance">Far Focal Distance</string>
    <string name="near_focal_distance">Near Focal Distance</string>
    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="depth_of_field">Depth of Field</string>
    <string name="_0_029">0.029</string>
    <string name="lens">Lens info</string>
    <string name="ex_1_5_for_1_5m">ex: 1.5 for 1.5m</string>
    <string name="selected_aperture">Selected aperture</string>
    <string name="circle_of_confusion_m">Circle of Confusion [mm]</string>
    <string name="distance_to_subject_m">Distance to subject [m]</string>
    <string name="icon">Icon</string>
    <string name="emptyList_text_title">There are currently no lens!</string>
    <string name="emptyList_text">Add a new lens by clicking the + below then enter the make, aperture, and focal length and don\'t forget to choose an icon.
        Once your done click the save button and the new lens will show up here. </string>
    <string name="save_icon_button">save icon button</string>
    <string name="item_view_make">Make</string>
    <string name="item_view_focal_length">Focal length</string>
    <string name="item_view_aperture">Aperture</string>
    <string name="default_icon">Default</string>
    <string name="dof_activity_title">Photo details with</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
</resources>
