<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/myMainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        tools:ignore="InvalidId" />

    <TextView
        android:id="@+id/textViewSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/select_a_lens"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLower"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="88dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAdd"
        android:layout_width="61dp"
        android:layout_height="58dp"
        android:clickable="true"
        android:src="@drawable/ic_add_white_24dp"
        app:backgroundTint="#E91E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineLower"
        app:layout_constraintVertical_bias="0.448" />

    <ListView
        android:id="@+id/listViewLens"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineLower"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelect"
        app:layout_constraintVertical_bias="1.0">

    </ListView>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Optional features:\n
2. Edit and Delete Lens: access through calculate activity\n
3. Error Checking Input         7. Empty State\n
4. Auto-reccalculate              1. App Bar Buttons\n
6. Lens Icons                           5. Save Data"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineLower"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/emptyList_imageError"
        android:layout_width="0dp"
        android:layout_height="@android:dimen/notification_large_icon_width"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/emptyList_textTitle"
        app:layout_constraintEnd_toEndOf="@+id/emptyList_textTitle"
        app:layout_constraintStart_toStartOf="@+id/emptyList_textTitle"
        app:srcCompat="@drawable/ic_error_grey_24dp"
        tools:ignore="VectorDrawableCompat" />

    <TextView
        android:id="@+id/emptyList_textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emptyList_text_title"
        android:textColor="#B0B0B1"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/guidelineLower"
        app:layout_constraintEnd_toEndOf="@+id/listViewLens"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/listViewLens" />

    <TextView
        android:id="@+id/emptyList_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/emptyList_text"
        android:textColor="#B0B0B1"
        android:textColorHint="#FFFFFF"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/emptyList_textTitle"
        app:layout_constraintStart_toStartOf="@+id/emptyList_textTitle"
        app:layout_constraintTop_toBottomOf="@+id/emptyList_textTitle" />

    <ImageView
        android:id="@+id/emptyList_imageArrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/buttonAdd"
        app:layout_constraintEnd_toEndOf="@+id/buttonAdd"
        app:layout_constraintStart_toStartOf="@+id/emptyList_text1"
        app:layout_constraintTop_toBottomOf="@+id/emptyList_text1"
        app:srcCompat="@drawable/arrow_drawn_grey" />

</androidx.constraintlayout.widget.ConstraintLayout>